# shell-pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shell_pilot/: __init__.py
tests/: test_shell_pilot.py
